src/objects/Model_Type_Cost__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Maintenance_Hours__c</fullName>
        <label>Annual Maintenance Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity_Size_Range__c</fullName>
        <label>Capacity/Size Range</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Cleaning_Hours__c</fullName>
        <label>Equipment Cleaning Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equipment_Type_Text__c</fullName>
        <description>Picklists are searchable fields. This field should have an exact copy of the value in the &apos;Equipment Type&apos; field.</description>
        <inlineHelpText>Copy the value from the &apos;Equipment Type&apos; field so that the field is searchable in lookup dialogs.</inlineHelpText>
        <label>Equipment Type Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Type__c</fullName>
        <label>Equipment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Equipment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <label>Labor</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Materials_Cost__c</fullName>
        <label>Materials Cost</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operational_Maintenance_Hours__c</fullName>
        <label>Operational Maintenance Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <label>Parts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pressure_Test_Hours__c</fullName>
        <label>Pressure Test Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refrigerant_Cost_per_Ton__c</fullName>
        <inlineHelpText>This is either a cost per ton or a flat rate.</inlineHelpText>
        <label>Refrigerant Cost per Ton</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refrigerant_Flat_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is either a flat rate or a cost per ton.  If the Refrigerant Flat Rate is checked, it’s a flat rate. This is used in the RefrigerantCostCalc - Workflow Field update</description>
        <inlineHelpText>If the Model should have a flat rate for the refrigerant, check this box.</inlineHelpText>
        <label>Refrigerant Flat Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seasonal_Shut_Down_Hours__c</fullName>
        <label>Seasonal Shut Down Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seasonal_Start_Up_Hours__c</fullName>
        <label>Seasonal Start Up Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Three_Houndred_Point_Inspection_Hours__c</fullName>
        <description>Default number of hours to do a 300 point inspection.</description>
        <label>300 Point Inspection Hours</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recommended_Hours__c</fullName>
        <formula>Annual_Maintenance_Hours__c  +  Operational_Maintenance_Hours__c +  Seasonal_Start_Up_Hours__c +  Seasonal_Shut_Down_Hours__c +  Equipment_Cleaning_Hours__c +  Pressure_Test_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Recommended Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tons</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>KW</fullName>
                </value>
                <value>
                    <fullName>MBH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Model Type Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Equipment_Type__c</columns>
        <columns>Equipment_Type_Text__c</columns>
        <columns>Refrigerant_Cost_per_Ton__c</columns>
        <columns>Capacity_Size_Range__c</columns>
        <columns>UoM__c</columns>
        <columns>Labor__c</columns>
        <columns>Parts__c</columns>
        <columns>Materials_Cost__c</columns>
        <columns>Refrigerant_Flat_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Model Type Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Models Type Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>